# 3D-object-segmentation

./: .gitignore  README.md  main.py  pyproject.toml  sam2_inference.py
__marimo__/session/: main.py.json
