[project]
name = "3d-reconstruction-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.18.1",
    "numpy>=2.3.5",
    "omegaconf>=2.3.0",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pycolmap>=3.13.0",
    "pyzmq>=27.1.0",
    "ruff>=0.14.6",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
